[FIX] dark mode grays too dark

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -94,7 +94,8 @@
 
   --sidebar-border: oklch(0.92 0.004 286.32);
 
-  --sidebar-ring: oklch(0.705 0.015 286.067)
+  --sidebar-ring: oklch(0.705 0.015 286.067);
+  --chart-grid: oklch(0.72 0.008 286);
 }
 
 
@@ -237,6 +238,7 @@ code {
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.552 0.016 285.938);
+  --chart-grid: oklch(1 0 0 / 12%);
 }
 
 @layer base {
